potential fix to logo stretching on login
There was a bug where only on a physical iphone 12 the formbee logo stretched out, presumably because height was set to fit content.

--- a/client/FormBee/src/app/login/login.component.scss
+++ b/client/FormBee/src/app/login/login.component.scss
@@ -20,7 +20,7 @@
 
 .logo img {
     width: 120px;
-    height: fit-content;
+    height: 80px;
     
 } 
 .logo img:hover {
